fix row alignment (#143)

--- a/apps/web/src/routes/_home/-components/upcoming-films-widget/upcoming-films-widget.module.css
+++ b/apps/web/src/routes/_home/-components/upcoming-films-widget/upcoming-films-widget.module.css
@@ -1,5 +1,6 @@
 .row {
   display: flex;
+  align-items: flex-start;
   gap: 20px;
   overflow-x: auto;
   height: 100%;
